# cds-weather-api

./: .gitignore  LICENSE  README.md  WeatherApi.py  __init__.py  exceptions.py  helpers.py  main.py  pyproject.toml  types.py
src/CdsApi/: ClientConfig.py  WeatherApi.py  __init__.py  client_config.py  exceptions.py  helpers.py  request_builder.py  types.py  validators.py  weather_api.py
src/CdsApi/examples/: example.py
src/examples/: example.py
tests/unit/: test_build.py  test_helpers.py  test_validators.py
