[project]
name = "weather-data"
version = "1.0.0"
description = "Cdsapi wrapper which organizes request attributes."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cdsapi>=0.7.7",
    "xarray>=2026.1.0",
]
[tool.setuptools]
py-modules = ["WeatherApi", "exceptions", "helpers", "main"]
