[project]
name = "cds_weather_api"
version = "2.1.2"
description = "Cdsapi wrapper which organizes request attributes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cdsapi>=0.7.7",
]

[project.optional-dependencies]
analysis = [
    "xarray>=2026.2.0",
]
[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
